# help-center-intelligence-analyzer

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
.github/workflows/: tests.yml
app/: streamlit_app.py
notebooks/: 01_quickstart.ipynb  02_data_exploration.ipynb  03_nlp_clustering_methodology.ipynb
reports/figures/: .gitkeep
sql/: 00_schema.sql  01_macro_effectiveness.sql  02_recommendations.sql
src/: __init__.py  ab_testing.py  agent_analysis.py  config.py  data_cleaning.py  data_generation.py  evaluation.py  export_reports.py  feature_engineering.py  macro_effectiveness.py  nlp_clustering.py  predictive_model.py  schemas.py  similarity_analysis.py  time_series_analysis.py  utils.py
tests/: __init__.py  conftest.py  test_ab_testing.py  test_agent_analysis.py  test_data_generation.py  test_feature_engineering.py  test_macro_effectiveness.py  test_nlp_clustering.py  test_schemas.py  test_similarity_analysis.py  test_time_series.py  test_utils.py
